[package]
name = "UUIS-backend"
version = "0.1.0"
edition = "2021"
features = "debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
chrono = "0.4.23"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde_json = "1.0.91"
futures-util = "0.3.25"
actix-files = "0.6.2"
actix-web-lab = "0.18.9"
actix-cors = "0.6.4"
qrcode = "0.12.0"
env_logger = "0.10.0"


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
